--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tremor/react": "^3.11.1",
     "@upstash/ratelimit": "^0.4.4",
     "@vercel/analytics": "^1.1.1",
     "@vercel/blob": "^0.15.0",
     "@vercel/kv": "^1.0.0",
     "@vercel/postgres": "^0.8.0",
+    "@web3forms/react": "^1.1.3",
     "ai": "^2.2.22",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.31.2",
@@ -35,6 +39,7 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.1",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.1.1",
     "remark": "^14.0.3",
