--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 ### DEVELOPMENT ONLY VARIABLES
 # These variables need to be set for local development only
 
-NEXTAUTH_URL="http://app.localhost:3000"
+NEXTAUTH_URL="http://app.digimoda.xyz/api/auth"
  
 NEXT_PUBLIC_ROOT_DOMAIN="digimoda.xyz"
 
